fixed aligning issues

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -27,5 +27,5 @@
 }
 
 .column-one-sixth {
-  flex-basis: calc(100 * 1/6);
+  flex-basis: calc(100% * 1/6);
 }
